# bana7-arumi

./: README.md  pyproject.toml
.github/workflows/: update_readme.yaml
scripts/: main.py  resident.json
tests/: test_main.py
